--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.1",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.4.1",
     "swiper": "^11.2.6"
   },
