--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.4.1",
-    "react-scroll-parallax": "^3.4.5",
-    "swiper": "^11.2.6"
+    "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
