--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "i18next-browser-languagedetector": "^8.0.4",
     "leaflet": "^1.9.4",
     "node-fetch": "^3.3.2",
+    "primereact": "^10.9.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
