--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.507.0",
     "node-fetch": "^3.3.2",
     "primereact": "^10.9.5",
     "react": "^19.0.0",
