--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
     "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^22.15.18",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
