--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "postinstall": "cd ../client && npm install && npm run build"
+    "postinstall": "cd /client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
