--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,9 @@
     "react-leaflet": "^5.0.0",
     "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.4.1",
-    "react-scroll-parallax": "^3.4.5"
+    "react-router-dom": "^7.6.1",
+    "react-scroll-parallax": "^3.4.5",
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -44,7 +45,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.1",
-    "vite": "^6.2.0"
+    "tailwindcss": "^4.1.1"
   }
 }
