--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "primereact": "^10.9.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
