--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "react-scroll-parallax": "^3.4.5",
+    "react-toastify": "^11.0.5",
     "vite": "^6.3.5"
   },
   "devDependencies": {
