--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.1",
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
+    "flutterwave-react-v3": "^1.3.2",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.510.0",
     "node-fetch": "^3.3.2",
