--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.1.1",
     "dotenv": "^16.5.0",
