--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.17.9",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.6.1",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "@tailwindcss/vite": "^4.1.1",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.510.0",
+    "mui-tel-input": "^9.0.1",
     "node-fetch": "^3.3.2",
     "primereact": "^10.9.5",
     "react": "^19.0.0",
