--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^7.6.1",
     "react-scroll-parallax": "^3.4.5",
     "react-toastify": "^11.0.5",
+    "sonner": "^2.0.7",
     "vite": "^6.3.5"
   },
   "devDependencies": {
